# mqtt-event-data-analysis

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  playground.ipynb  pyproject.toml
almacenamiento/: index.html
atributos/: index.html
docs/: almacenamiento.md  atributos.md  exploracion.md  index.md  instrucciones.md  modelado.md  objetivos.md  recopilacion.md  requisitos.md
exploracion/: index.html
instrucciones/: index.html
modelado/: index.html
objetivos/: index.html
recopilacion/: index.html
requisitos/: index.html
search/: search_index.json
src/: client.py  models.py
